--- a/src/scss/themes/fylr/components/_progress-meter.scss
+++ b/src/scss/themes/fylr/components/_progress-meter.scss
@@ -27,8 +27,11 @@
 		}
 
 		.cui-progress-meter-icon {
-			text-align: center;
 			position: relative;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			text-align: center;
 
 			.svg-spinner {
 				height: $btn-height;
